# app-manager

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Dockerfile.aarch64  README.md  test.py  wasm.Dockerfile
.github/workflows/: on-push.yml
src/: cli.rs  composegenerator.rs  constants.rs  github.rs  gitlab.rs  hosted_git.rs  lib.rs  updates.rs  utils.rs
src/cli/: download.rs  preprocessing.rs  repos.rs  tera.rs  umbrel.rs
src/cli/repos/: git.rs
src/composegenerator/: types.rs
src/composegenerator/output/: types.rs
src/composegenerator/umbrel/: convert.rs  types.rs
src/composegenerator/v3/: convert.rs  types.rs  update.rs
src/composegenerator/v4/: convert.rs  permissions.rs  types.rs  update.rs  utils.rs
src/conch/: ast.rs  lexer.rs  parse.rs  token.rs
src/conch/ast/: builder.rs
src/conch/ast/builder/: default_builder.rs  empty_builder.rs
src/conch/parse/: iter.rs
