[package]
name = "citadel-apps"
description = "Handle Citadel app.yml files"
license = "AGPL-3.0-or-later"
version = "0.4.0"
edition = "2021"
repository = "https://github.com/runcitadel/app-cli"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
regex = "1"
lazy_static = "1.4"
hex = "0.4.3"
hmac-sha256 = "1.1.5"
anyhow = { version = "1.0.66", features = ["backtrace"] }
tracing = "0.1.37"
# Optional dependencies
schemars = { version = "0.8", optional = true }
tokio  = { version = "1.22.0", optional = true, features = ["net", "rt"] }
bollard = { version = "0.13.0", optional = true }
futures-util = { version = "0.3.25", optional = true }
octocrab = { version = "0.17.0", optional = true }
semver = { version = "1.0.14", optional = true }
gitlab = { version = "0.1505.0", optional = true }
url = { version = "2.3.0", optional = true }
# Only used by the CLI
clap = { version = "3.2", features = ["derive"], optional = true }
tera = { version = "1", default-features = false, optional = true }
dotenv = { version = "0.15.0", optional = true }
tempdir = { version = "0.3.7", optional = true }
git2 = { version = "0.15.0", optional = true }
fs_extra = { version = "1.2.0", optional = true }
tracing-subscriber = { version = "0.3.16", optional = true }
libz-sys = { version = "1.1.0", default-features = false, features = ["libc", "static"], optional = true }
void = { version = "1.0.2", optional = true }
rand = { version = "0.8.5", optional = true }
sha1 = { version = "0.10.5", optional = true }

[profile.release]
strip = true
lto = true


[[bin]]
name = "app-cli"
required-features = ["cli"]

[features]
cli = ["dep:clap", "dep:tracing-subscriber", "dep:dotenv", "dep:tera", "dep:tempdir", "dep:git2", "dep:semver", "dep:fs_extra", "dep:libz-sys", "dep:rand", "dep:sha1"]
umbrel = ["dep:void"]
dev-tools = ["umbrel", "schema", "docker", "dep:octocrab", "dep:semver", "dep:gitlab", "dep:url", "dep:tokio"]
schema = ["dep:schemars"]
docker = ["dep:bollard", "dep:futures-util"]

[dev-dependencies]
pretty_assertions = "1.3.0"
